--- a/library-management-backend/package.json
+++ b/library-management-backend/package.json
@@ -1,34 +1,53 @@
 {
-  "name": "library-management-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "tsc",
-    "start": "node build/src/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "migrate:dev": "yarn prisma migrate dev && ts-node-dev --respawn --transpile-only src/server.ts",
-    "migrate": "prisma migrate deploy"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@prisma/client": "^6.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.21.1"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/node": "^22.10.1",
-    "nodemon": "^3.1.7",
-    "prisma": "^5.0.0",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
-  },
-  "prisma": {
-    "seed": "ts-node --transpile-only prisma/seed.ts"
-  }
+	"name": "library-management-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "tsc",
+		"start": "node build/src/server.js",
+		"dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+		"migrate:dev": "yarn prisma migrate dev && ts-node-dev --respawn --transpile-only src/server.ts",
+		"migrate": "prisma migrate deploy",
+		"test": "jest"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@prisma/client": "^6.0.0",
+		"cors": "^2.8.5",
+		"express": "^4.21.1",
+		"jest-mock-extended": "^4.0.0-beta1",
+		"fs-extra": "^11.2.0"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.10.1",
+		"@types/supertest": "^6.0.2",
+		"jest": "^29.7.0",
+		"nodemon": "^3.1.7",
+		"prisma": "^5.0.0",
+		"supertest": "^7.0.0",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.7.2"
+	},
+	"prisma": {
+		"seed": "ts-node --transpile-only prisma/seed.ts"
+	},
+	"jest": {
+		"preset": "ts-jest",
+		"testEnvironment": "node",
+		"moduleFileExtensions": [
+			"ts",
+			"js"
+		],
+		"transform": {
+			"^.+\\.(ts|tsx)$": "ts-jest"
+		}
+	}
 }
